@@ -98,11 +98,13 @@
     (format stream "(in-package :clfswm)~2%")
     (format stream "(setf~%")
     (dolist (group all-groups)
-      (format stream "  ;; ~A:~%" group)
+      (format stream "  ;; ~A:~%" (config-group->string group))
       (dolist (var all-variables)
-	(when (string-equal (second var) group)
-	  (format stream "  ~A ~A~%" (first var)
-		  (escape-conf-symbol-value (first var)))))
+        (unless (equal (escape-conf-symbol-value (first var))
+                       (escape-conf-value (config-default-value (first var))))
+          (when (string-equal (second var) group)
+            (format stream "  ~A ~A~%" (first var)
+                    (escape-conf-symbol-value (first var))))))
       (format stream "~%"))
     (format stream ")~%")
     (format stream ";;; ### End of internal variables definitions ### ;;;~%")))
